re PR c++/37649 (ICE with invalid template class)

/cp
2008-09-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/37649
	* name-lookup.c (maybe_process_template_type_declaration): Check
	return value of push_template_decl_real for error_mark_node.

/testsuite
2008-09-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/37649
	* g++.dg/template/crash82.C: New.

From-SVN: r140670